# multi_turtlebot_sim

./: CMakeLists.txt  LICENSE  README.md  TODO  package.xml
launch/: localization_launch.py  spawn_turtlebot3.launch.py  standalone_world.launch.py
param/: waffle.yaml
rviz/: one_turtle_no_prefix.rviz  one_turtle_no_prefix_amcl.rviz  robot1.rviz  robot1_and_2.rviz  robot2.rviz
urdf/: gazebo_specific.urdf.xacro  turtlebot3_waffle.urdf.xacro
